# SrcCodeReader

./: CMakeLists.txt  README.md
cmake/: FindLLVM.cmake  ThreadSupport.cmake
src/: findFunction.cc
test/: test.c
